# renaissance

./: .editorconfig  .gitattributes  .gitignore  .gitignore.740828109  AAA.md  ABP1.md  ABP2.md  ABP3.md  ACV1.md  ACV2.md  ACV3.md  AMPK.md  AV2.md  AV3.md  AVY_REV.md  AWJ1.md  AWJ2.md  AWJ3.md  AWK1.md  AWK2.md  AWK3.md  AXU1.md  AXU2.md  AXU3.md  AXU_FINAL.md  AXU_REV2.md  AXX.md  AYH1.md  AYH2.md  AYH3.md  AYH_FINAL.md  AYH_REV.md  AZQ1.md  AZQ2.md  AZQ3.md  BEST.md  BEST_D1.md  BEST_D2.md  BEST_D4.md  BEST_REV.md  (+420 more)
src/: CMakeLists.txt
src/algo/: README.md  loss.cpp  optimizer.cpp  scheduler.cpp
src/backend/: README.md  cpu_kernels.cpp.bak  cuda_kernels.cu.bak  device_context.cpp  graph_executor.cpp  infra_kernels.cpp  infra_kernels.cu  memory_arena.cpp  op_registry.cpp  op_stream_policy.cpp
src/base/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cpu_arena.cpp  cuda_arena.cpp  device_type.cpp  downloader.cpp  dtype.cpp  global_registry.cpp  hello.cpp  logger.cpp  memory_arena.cpp  memory_plan.cpp  musa_arena.cpp  rng.cpp  tr_exception.cpp  tr_exception.cpp.bak
src/core/: README.md  downloader.cpp  global_registry.cpp  initializer.cpp  logger.cpp  rng.cpp  staging_buffer_pool.cpp  staging_param_pool.cpp  tr_exception.cpp
src/data/: CMakeLists.txt  README.md  center_crop.cpp  cifar_loader_dts.cpp  cifar_loader_raw.cpp  color_jitter.cpp  cpu_advisor.cpp  do_nothing.cpp  dts_data_loader.cpp  dts_data_loader_utf8.cpp  engine_buffer.cpp  engine_buffer.cpp.bak  engine_buffer_fail2.cpp  engine_buffer_pass1.cpp  fast_random_resized_crop.cpp  file_handle.cpp  fused_normalization.cpp  fused_normalization.cpp.bak  gaussian_blur.cpp  gaussian_noise.cpp  hardware_topology.cpp  hardware_topology.h  imagenet_loader_dts.cpp  imagenet_loader_dts.cpp.bak  imagenet_loader_raw.cpp  mnist_loader_dts.cpp  mnist_loader_raw.cpp  normalize.cpp  pad.cpp  pad.cpp.bak  preprocess_operation.cpp  preprocess_worker.cpp  preprocess_worker.cpp.bak  preprocessor.cpp  preprocessor.cpp.backup  preprocessor.cpp.bak  preprocessor_emulator.cpp  preprocessor_planC.cpp.bak  random_autocontrast.cpp  random_brightness.cpp  (+16 more)
src/device/: CMakeLists.txt  cpu_cast.cpp  cpu_comp.cpp  cpu_copy.cpp  cpu_create.cpp  cpu_device.cpp  cpu_device_tsr.cpp  cpu_random.cpp  cuda_cast.cpp  cuda_cast.cu  cuda_comp.cpp  cuda_copy.cpp  cuda_create.cpp  cuda_device.cpp  cuda_kernels.cu  cuda_nccl.cpp  cuda_random.cpp  cuda_rng_kernels.cu  device.cpp  device_manager.cpp  musa_cast.cpp  musa_cast.cu  musa_comp.cpp  musa_copy.cpp  musa_create.cpp  musa_device.cpp  musa_device.cpp.bak  musa_device.cpp.old  musa_kernels.cu  musa_kernels.mu  musa_random.cpp  musa_rng_kernels.cu
src/graph/: README.md  arch_plan_expand.cpp  arch_plan_format.cpp  arch_plan_merge.cpp  arch_plan_normalize.cpp  arch_plan_shape.cpp  arch_plan_yaml.cpp  capture_cpu.cpp  capture_cuda.cpp  capture_multi_stream.cpp  captured_graph.cpp  compiler.cpp  layer_descriptor_registry.cpp  memory_plan.cpp  op_kind.cpp
src/task/: README.md  deep_learning_task.cpp  simple_task.cpp  simple_task.cpp.1325769515  simple_task_legacy.cpp.bak  task_base.cpp  task_base_legacy.cpp.bak
src/tensor/: README.md  tensor.cpp
src/utils/: CMakeLists.txt  initializer.cpp  profiler.cpp  python_session.cpp
tests/: CMakeLists.txt  README.md
tests/base/: CMakeLists.txt  test_arena.cpp  test_cpu_arena.cpp  test_crc32_comparison.cpp  test_cuda_arena.cpp  test_downloader.cpp  test_exception.cpp  test_global_registry.cpp  test_logger.cpp  test_memory_alignment.cpp  test_memory_plan.cpp  test_musa_arena.cpp  test_rng.cpp  test_terminate_handler.cpp
tests/bind/: CMakeLists.txt  a.cpp  bind.md  bind_a  bind_f  f.cpp
tests/bn/: CMakeLists.txt  gen_report.py  generate_report.py  mini_lenet.cpp  mini_lenet_bn.cpp  mnist_best_adamw.cpp  mnist_best_adamw.py  mnist_best_adamw_bn.cpp  mnist_best_adamw_bn.py  test_bn_fwd_bwd.cpp  test_bn_fwd_bwd.py  test_lenet.cpp  test_lenet.py  test_lenet_bn.cpp  test_lenet_bn.py
tests/correction/: CMakeLists.txt  benchmark_pytorch.py  benchmark_pytorch_compile.py  benchmark_pytorch_compile_train_only.py  benchmark_pytorch_eager_train_only.py  benchmark_pytorch_fast.py  benchmark_pytorch_init01.py  mnist_best.cpp  mnist_best_adamw.cpp  mnist_best_adamw.py  mnist_best_dropout.cpp  mnist_best_eager.py  mnist_best_lars.cpp  mnist_best_lars.py  mnist_best_maxpool.cpp  mnist_best_pytorch.py  perf_dl_xfer_ab.cpp  perf_h2d_copy_a.cpp  perf_h2d_copy_b.cpp  pt_gpu_temp.txt  rng_comparison_test.cpp  run_relu_bench.ps1  run_tanh_bench.ps1  test_adam_bias.cpp  test_adam_weight.cpp  test_adamw_bias.cpp  test_adamw_weight.cpp  test_cast_fp16_to_fp32.cpp  test_cast_fp32_to_fp16.cpp  test_check_nan.cpp  test_clear.cpp  test_d2d_copy.cpp  test_dl_dry.cpp  test_dl_full.cpp  test_dl_full_amp.cpp  test_dl_full_gpu.cpp  test_flatten_fc_relu_fc.cpp  test_flatten_fc_relu_fc.py  test_fused_normalization.cpp  test_gap.cpp  (+26 more)
tests/data/: CMakeLists.txt  test_cifar_dts.cpp  test_cifar_raw.cpp  test_crc_verification.cpp  test_cross_epoch_reproducibility.cpp  test_dataloader_basic.cpp  test_dataloader_performance.cpp  test_download.cpp  test_fully_mode.cpp  test_mnist_cifar_raw_reproducibility.cpp  test_mnist_dts.cpp  test_mnist_raw.cpp  test_partial_mode.cpp  test_partial_mode.cpp.bak  test_performance.cpp  test_preproc.cpp  test_print.cpp  test_raw_cross_epoch_reproducibility.cpp  test_raw_fully_mode.cpp  test_raw_partial_mode.cpp  test_raw_reproducibility.cpp  test_reproducibility.cpp  test_reproducibility_epoch.cpp  test_sample_loader.cpp  test_shape.cpp  test_shared_buffers.cpp  test_storage_ownership.cpp  test_unifieddataloader.cpp  test_val_only.cpp  verify_reproducibility.py
tests/decode/: CMakeLists.txt  c.cpp  d.cpp  e.cpp
tests/dependency/: CMakeLists.txt  hello_cuda.cpp  hello_libcurl.cpp  hello_mimalloc.cpp  hello_musa.mu  hello_nccl.cpp  hello_onednn.cpp  hello_simd.cpp  hello_stb.cpp  hello_world.cpp
tests/device/: CMakeLists.txt  test_allreduce_speed.cpp  test_broadcast_speed.cpp  test_cpu_cast.cpp  test_cpu_copy.cpp  (+27 more)
unit_tests/: CMakeLists.txt
(+874 files in other folders)
